FIX: выбор даты z-index

--- a/client/admin/src/assets/sass/base/_forms.sass
+++ b/client/admin/src/assets/sass/base/_forms.sass
@@ -183,3 +183,5 @@ $checkbox-switch-duration: 0.1s
 //border-radius: 0 $border-rounded-border-radius $border-rounded-border-radius 0
 
 
+.uk-form-icon
+  z-index: 2
