--- a/client/admin/src/assets/sass/ui/_input-date-time.sass
+++ b/client/admin/src/assets/sass/ui/_input-date-time.sass
@@ -6,7 +6,7 @@
     width: 100%
     max-width: 100%
     position: relative
-    z-index: 0
+    z-index: 1
 
     .vdpClearInput
       right: $global-control-height
